automation/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: larpbabylone
  labels:
    app.kubernetes.io/part-of: larpbabylone
