automation/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: larpbabylone-frontend
  namespace: larpbabylone
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: larpbabylone
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: larpbabylone
    spec:
      containers:
        - name: frontend
          image: larpbabylone-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: larpbabylone-frontend
  namespace: larpbabylone
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: larpbabylone
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
